# UnqLang

./: .gitignore  CMakeLists.txt  README.MD
docs/: ASSEMBLY.md  COMPILER.md  README.md
programs/: factorial.unq  gol.unq  multi_fibonacci.unq  quicksort.unq  struct_test.unq
res/builtin/: dbg.usm  dev_in.usm  dev_out.usm  putc.usm  putc_inl.usm  puti.usm  rd.usm
src/: main.cpp  main_assembler.cpp  main_compiler.cpp  parser.hpp  shift_reduce_parser.hpp  utils.hpp
src/assembly/: assembly.cpp  assembly.hpp  assembly_parser.cpp  assembly_parser.hpp
src/compiler/: ast.cpp  ast.hpp  ast_helpers.cpp  ast_helpers.hpp  ast_interpreter.cpp  ast_interpreter.hpp  compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp
src/compiler/analysis/: types.cpp  types.hpp
src/machine/: assembler.cpp  assembler.hpp  computer.cpp  computer.hpp  computer_split.cpp  computer_split.hpp  instruction.hpp  instruction.inl  instruction_helper.cpp  instruction_helper.hpp  instruction_helper.inl  peripheral.hpp  ram.hpp  ram.inl  register.hpp  register.inl
src/unqlang/: ast.cpp  ast.hpp  ast_helpers.cpp  ast_helpers.hpp  ast_interpreter.cpp  ast_interpreter.hpp  compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp
src/unqlang/analysis/: complex_literals.hpp  expressions.cpp  expressions.hpp  functions.cpp  functions.hpp  statements.cpp  statements.hpp  types.cpp  types.hpp  variables.cpp  variables.hpp
src/unqlang/compiler/: common.hpp  compiler.cpp  compiler.hpp  function.cpp  function.hpp  scope.cpp  scope.hpp  variable.cpp  variable.hpp
